[package]
name = "gemini-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
syntect = "5.2"
# Add or update this line
pulldown-cmark = "0.11.0"
bat = "0.24"
